# svgn

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  PLAN.md  PLAN2.md  README.md  SPEC.md  TODO.md  TODO.md.bak  TODO2.md  build.log.txt  build.sh  docs.txt  generate_compatibility_tests.py  llms.txt  package.json  test_css_debug.rs
.github/workflows/: release.yml  rust.yml  test-build-scripts.yml
.specstory/history/: 2025-07-02_18-20Z-benchmarking-svg-optimization-tools.md
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  Gemfile  _build.sh  _config.yml  _serve.sh  architecture.md  comparison.md  index.md  package-lock.json  package.json  plugins.md  tailwind.config.js  usage.md
docs/_data/: navigation.yml
docs/_includes/: footer.html  header.html  sidebar.html  tool_sidebar.html
docs/_layouts/: default.html  tool.html
docs/_sass/custom/: custom.scss
docs/_tools/: README.md  index.md  optimizer.md
docs/assets/css/: input.css  main.css
docs/assets/js/: svg-optimizer.js  theme.js
docs/work/: SVGO_PLUGINS_COMPREHENSIVE_LIST.md
issues/: 201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  213.txt  214.txt  215.txt  216.txt  217.txt  225.txt  227.txt  228.txt  401.txt  403.txt  404.txt  405.txt  406.txt  407.txt  410.txt  412.txt  413.txt  420.txt  501.txt  502.txt  503.txt  504.txt  505.txt  506.txt
scripts/: README.md  benchmark.sh  benchmark1.sh  build_linux.sh  build_macos.sh  build_windows.cmd  test1.sh
src/: lib.rs  main.rs
src/plugins/: convert_colors.rs  convert_one_stop_gradients.rs  minify_styles.rs  mod.rs
svgn/: Cargo.toml  TODO.md  build.rs
svgn/benches/: optimization.rs
svgn/examples/: test_css_debug.rs  test_style_plugins.rs
svgn/src/: ast.rs  collections.rs  config.rs  lib.rs  optimizer.rs  parser.rs  plugin.rs  stringifier.rs
svgn/src/plugins/: add_attributes_to_svg_element.rs  add_classes_to_svg_element.rs  cleanup_attrs.rs  cleanup_enable_background.rs  cleanup_ids.rs  cleanup_list_of_values.rs  cleanup_numeric_values.rs  collapse_groups.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_one_stop_gradients.rs  convert_path_data.rs  convert_shape_to_path.rs  convert_style_to_attrs.rs  convert_transform.rs  inline_styles.rs  inline_styles_complex.rs  inline_styles_converter.rs  inline_styles_selector.rs  merge_styles.rs  minify_styles.rs  mod.rs  prefix_ids.rs  remove_attributes_by_selector.rs  remove_attrs.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_dimensions.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_elements_by_attr.rs  remove_empty_attrs.rs  remove_empty_containers.rs  remove_empty_text.rs  remove_hidden_elems.rs  remove_metadata.rs  remove_non_inheritable_group_attrs.rs  remove_off_canvas_paths.rs  remove_raster_images.rs  (+14 more)
svgn/src/plugins/inline_styles/: inline_styles_converter.rs  inline_styles_selector.rs
svgn/tests/: fixture_tests.rs  integration_test.rs  plugins.rs  svgo_compatibility_tests.rs
svgn/tests/plugins/: cleanup_attrs.rs  cleanup_ids.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_one_stop_gradients.rs  convert_path_data.rs  inline_styles.rs  remove_attributes_by_selector.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_dimensions.rs  remove_empty_attrs.rs
tools/: set-cargo-version.sh
work/: SVGN_PLUGIN_ANALYSIS_SUMMARY.md  SVGO_SVGN_PLUGIN_COMPARISON.md
