[workspace]
members = [ "svgn" ]
default-members = [ "svgn" ]
resolver = "2"


[workspace.package]
version = "1.2.3"
edition = "2021"
authors = [ "Adam Twardoch <adam@twardoch.com>" ]
license = "MIT"
repository = "https://github.com/twardoch/svgn"
homepage = "https://github.com/twardoch/svgn"


[workspace.dependencies]
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
quick-xml = "0.38.0"
roxmltree = "0.20"
cssparser = "0.35.0"
selectors = "0.30.0"
lightningcss = "1.0.0-alpha.67"
precomputed-hash = "0.1"
regex = "1.10"
indexmap = "2.0"
base64 = "0.22"
urlencoding = "2.1"
once_cell = "1.19.0"
toml = "0.8"
lyon = "1.0"
nalgebra = "0.33"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.6.0"
wasm-bindgen = "0.2"
js-sys = "0.3"


[workspace.dependencies.clap]
version = "4.4"
features = [ "derive" ]


[workspace.dependencies.serde]
version = "1.0"
features = [ "derive" ]


[workspace.dependencies.usvg]
version = "0.45.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
