[package]
name = "svgn"
version = "0.1.0"
edition = "2021"
authors = ["Adam Twardoch <adam@twardoch.com>"]
license = "MIT"
description = "A high-performance Rust port of SVGO (SVG Optimizer)"
homepage = "https://github.com/twardoch/svgn"
repository = "https://github.com/twardoch/svgn"
readme = "README.md"
keywords = ["svg", "optimization", "graphics", "xml"]
categories = ["graphics", "command-line-utilities", "web-programming"]

[[bin]]
name = "svgn"
path = "src/bin/svgn.rs"

[dependencies]
once_cell = "1.19.0"
# XML parsing
quick-xml = "0.31"

# CSS parsing  
cssparser = "0.31"
selectors = "0.25"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Path processing
lyon = "1.0"

# Optional: SVG utilities
usvg = { version = "0.42", optional = true }

# Error handling
thiserror = "1.0"

# Regular expressions
regex = "1.10"

# URL encoding
urlencoding = "2.1"

# Ordered maps
indexmap = "2.0"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = []
usvg-utils = ["dep:usvg"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "optimization"
harness = false
