[package]
name = "svgn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A high-performance Rust port of SVGO (SVG Optimizer)"
readme = "../README.md"
keywords = ["svg", "optimization", "graphics", "xml", "cli"]
categories = ["graphics", "command-line-utilities", "web-programming"]

[[bin]]
name = "svgn"
path = "src/bin/svgn.rs"

[dependencies]
once_cell = { workspace = true }
# XML parsing
quick-xml = { workspace = true }

# CSS parsing  
cssparser = { workspace = true }
selectors = { workspace = true }

# CLI
clap = { workspace = true }

# Configuration and serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Path processing
lyon = { workspace = true }

# Optional: SVG utilities
usvg = { version = "0.42", optional = true }

# Error handling
thiserror = { workspace = true }

# Regular expressions
regex = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Ordered maps
indexmap = { workspace = true }

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[features]
default = []
usvg-utils = ["dep:usvg"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "optimization"
harness = false
