[package]
name = "svgn"
description = "A high-performance Rust port of SVGO (SVG Optimizer)"
readme = "../README.md"
keywords = [ "svg", "optimization", "graphics", "xml", "cli" ]
categories = [ "graphics", "command-line-utilities", "web-programming" ]


[package.version]
workspace = true


[package.edition]
workspace = true


[package.authors]
workspace = true


[package.license]
workspace = true


[package.repository]
workspace = true


[package.homepage]
workspace = true


[[bin]]
name = "svgn"
path = "src/bin/svgn.rs"


[dependencies.once_cell]
workspace = true


[dependencies.quick-xml]
workspace = true


[dependencies.cssparser]
workspace = true


[dependencies.selectors]
workspace = true


[dependencies.lightningcss]
workspace = true


[dependencies.precomputed-hash]
workspace = true


[dependencies.clap]
workspace = true


[dependencies.serde]
workspace = true


[dependencies.serde_json]
workspace = true


[dependencies.toml]
workspace = true


[dependencies.lyon]
workspace = true


[dependencies.nalgebra]
workspace = true


[dependencies.usvg]
version = "0.42"
optional = true


[dependencies.thiserror]
workspace = true


[dependencies.regex]
workspace = true


[dependencies.urlencoding]
workspace = true


[dependencies.indexmap]
workspace = true


[target."cfg(target_arch = \"wasm32\")".dependencies.wasm-bindgen]
workspace = true


[target."cfg(target_arch = \"wasm32\")".dependencies.js-sys]
workspace = true


[features]
default = [ ]
usvg-utils = [ "dep:usvg" ]


[dev-dependencies.criterion]
workspace = true


[[bench]]
name = "optimization"
harness = false
